--- a/Investigation.API/appsettings.json
+++ b/Investigation.API/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=INSULARIS\\MORGANALEFAY; Database = Investigation; Encrypt=False; User Id=sa; Password =abc1234*" 
+
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
