Commit arreglo entidades

--- a/Investigation.API/appsettings.Development.json
+++ b/Investigation.API/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=KEVIN-PC; Database = Investigation; Encrypt=False; User Id=admin; Password =3537501kK*"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
