--- a/Investigation.API/appsettings.Development.json
+++ b/Investigation.API/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=KEVIN-PC; Database = Investigation; Encrypt=False; User Id=admin; Password =3537501kK*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=INSULARIS\\MORGANALEFAY; Database = Investigation; Encrypt=False; User Id=sa; Password =abc1234*"
 
-  },
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
