--- a/Investigation.API/appsettings.json
+++ b/Investigation.API/appsettings.json
@@ -1,7 +1,7 @@
 {
 
     "ConnectionStrings": {
-        "DefaultConnection": "Server=Insularis\\MORGANALEFAY; Database = Investigation; Encrypt=False; User Id=sa; Password =Abcd1234*"
+        "DefaultConnection": "Server=KEVIN-PC; Database = Investigation; Encrypt=False; User Id=admin; Password =3537501kK*"
 
     },
     "Logging": {
