--- a/Investigation.API/appsettings.Development.json
+++ b/Investigation.API/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=KEVIN-PC; Database = Investigation; Encrypt=False; User Id=admin; Password =3537501kK*"
+    "DefaultConnection": "Server=KEVIN-PC; Database = Investigation; Encrypt=False; User Id=admin; Password =1234567k"
 
   },
   "Logging": {
